fate-60003/dc-fateboard.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: fateboard-60003
  name: fateboard-60003
spec:
  replicas: 1
  selector:
    app: fateboard-60003
    deploymentconfig: fateboard-60003
  template:
    metadata:
      labels:
        app: fateboard-60003
        deploymentconfig: fateboard-60003
    spec:
      containers:
      - args:
        - sed -i "s#^spring.datasource.url=.*#spring.datasource.url=jdbc:mysql://${MYSQL_IP}:3306/${MYSQL_DATABASE}?characterEncoding=utf8\&characterSetResults=utf8\&autoReconnect=true\&failOverReadOnly=false\&serverTimezone=GMT%2B8#g" ${APPLICATION_PROPERTIES} && sed -i "s#^fate.url=.*#fate.url=http://${FATEFLOW_IP}:9380#g" ${APPLICATION_PROPERTIES} && java -Dspring.config.location=$configpath/application.properties -Dssh_config_file=$configpath -Xmx2048m -Xms2048m -XX:+PrintGCDetails -XX:+Prin [...]
        command:
        - /bin/sh
        - -c
        image: docker-repo.sonic.com:443/fate/fateboard:5.1
        imagePullPolicy: IfNotPresent
        name: fateboard-60003
