fate-60003/dc-fateflow.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: fateflow-60003
  name: fateflow-60003
spec:
  replicas: 1
  selector:
    app: fateflow-60003
    deploymentconfig: fateflow-60003
  template:
    metadata:
      labels:
        app: fateflow-60003
        deploymentconfig: fateflow-60003
    spec:
      containers:
      - args:
        - sleep 3600000
        command:
        - /bin/sh
        - -c
        image: docker-repo.sonic.com:443/fate/egg-fateflow-storage:5.2
        imagePullPolicy: IfNotPresent
        name: fateflow-60003
