fate-60003/dc-federation.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: federation-60003
  name: federation-60003
spec:
  replicas: 1
  selector:
    app: federation-60003
    deploymentconfig: federation-60003
  template:
    metadata:
      labels:
        app: federation-60003
        deploymentconfig: federation-60003
    spec:
      containers:
      - args:
        - sed -i "s/party.id=.*/party.id=${PARTY-ID}/g" ${FEDERATION_PROPERTIES} && sed -i "s/meta-service-ip/${META_SERVICE_IP}/g" ${FEDERATION_PROPERTIES} && java -cp conf/:lib/*:fate-federation.jar com.webank.ai.fate.driver.Federation -c conf/federation.properties >> logs/console.log 2>>logs/error.log
        command:
        - /bin/sh
        - -c
        image: docker-repo.sonic.com:443/fate/federation:5.1
        imagePullPolicy: IfNotPresent
        name: federation-60003
