fate-60003/proxy.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: proxy-60003
  name: proxy-60003
spec:
  replicas: 1
  selector:
    app: proxy-60003
    deploymentconfig: proxy-60003
  template:
    metadata:
      labels:
        app: proxy-60003
        deploymentconfig: proxy-60003
    spec:
      containers:
      - args:
        - sed -i "s/party-id/${GUEST_PARTY_ID}/g" ${PROXY_PROPERTIES} && sed -i "s/proxy-ip/${MY_POD_IP}/g" ${PROXY_PROPERTIES} && sed -i "s/host-proxy-ip/${HOST_PROXY_IP}/g" ${ROUTE_TABLE_JSON} && sed -i "s/host-party-id/${GUEST_PARTY_ID}/g" ${ROUTE_TABLE_JSON} && sed -i "s/federation-ip/${FEDERATION_IP}/g" ${ROUTE_TABLE_JSON} && sed -i "s/fateflow-ip/${FATEFLOW_IP}/g" ${ROUTE_TABLE_JSON} && sed -i "s/guest-party-id/${GUEST_PARTY_ID}/g" ${ROUTE_TABLE_JSON} && sed -i "s/guest-proxy-ip/${GUEST_PR [...]
        command:
        - /bin/sh
        - -c
        image: docker-repo.sonic.com:443/fate/proxy:5.1
        imagePullPolicy: IfNotPresent
        name: proxy-60003
