fate-60003/svc-meta-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: meta-service-60003
  name: meta-service-60003
spec:
  clusterIP: 
  ports:
  - name: 8590-tcp
    port: 8590
    protocol: TCP
    targetPort: 8590
  selector:
    deploymentconfig: meta-service-60003
  type: ClusterIP
