fate-60003/svc-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: proxy-60003
  name: proxy-60003
spec:
  clusterIP: 
  ports:
  - name: 9370-tcp
    port: 9370
    protocol: TCP
    targetPort: 9370
  selector:
    deploymentconfig: proxy-60003
  type: ClusterIP
