fate-60003/svc-roll.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: roll-60003
  name: roll-60003
spec:
  clusterIP:
  ports:
  - name: 8011-tcp
    port: 8011
    protocol: TCP
    targetPort: 8011
  selector:
    deploymentconfig: roll-60003
  type: ClusterIP
