fate-60003/route-fateboard.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: fateboard-60003
  name: fateboard-60003
spec:
  host: fateboard-60003.sonic.com
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: fateboard-60003
